<resources>

    <!-- App Toolbar Name -->
    <!-- -->
    <string name="app_name">San Diego Venture</string>
    <string name="action_settings">Settings</string>



    <!-- Individual Detail Activity Toolbar Names -->
    <!-- -->
    <string name="venture_details">Venture Details</string>



    <!-- Strings related to preferences -->
    <!-- -->
    <string name="title_activity_prefs">PrefsActivity</string>
    <string name="display_in_grid">Display in grid</string>
    <string name="display_menu_data_in_a_multi_column_grid">Display menu data in a multi-column grid</string>
    <string name="pref_display_grid">pref display grid</string>
    <string name="settings">Settings</string>



    <!-- Individual Activities -->
    <!-- -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_main_adapter">MainAdapter</string>
    <string name="title_activity_womens">WomensWearActivity</string>



    <!-- Strings related to DROP DOWN MENU hot links -->
    <!-- -->
    <string name="action_facebook">Facebook</string>
    <string name="action_Twitter">Twitter</string>
    <string name="action_YahooNews">Yahoo News</string>
    <string name="action_Google">Google</string>
    <string name="action_GoogleMaps">Google Maps</string>


</resources>
