<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.core.data_03.MainActivity">


    <!-- DISPLAY SETTINGS OPTION ON TOOLBAR -->
    <!-- -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="001"
          app:showAsAction="ifRoom" />

    <item
            android:id="@+id/action_facebook"
            android:orderInCategory="002"
            android:title="@string/action_facebook"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_twitter"
            android:orderInCategory="003"
            android:title="@string/action_Twitter"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_yahooNews"
            android:orderInCategory="004"
            android:title="@string/action_YahooNews"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_google"
            android:orderInCategory="005"
            android:title="@string/action_Google"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_googleMaps"
            android:orderInCategory="006"
            android:title="@string/action_GoogleMaps"
            app:showAsAction="never" />


</menu>
